# nsfplay_webassembly

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  example.html  nsf2wav_wasm.cpp
vcm/: ReadMe.txt  vcm.h  vcm.vcproj
xgm/: version.h  xgm.h
xgm/devices/Misc/: log_cpu.cpp
xgm/devices/Sound/legacy/: emu2413.c  emu2413.h
xgm/player/: soundData.h
xgm/player/nsf/: nsf.cpp  nsfplay.cpp
